--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "css-loader": "^0.26.1",
     "foundation-sites": "^6.3.0",
     "jquery": "^3.1.1",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^5.0.1",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
