--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
     "foundation-sites": "^6.3.0",
+    "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
